2014-10-12  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	Fix import completion.  (Bug#18582)
	* progmodes/python.el (python-shell-completion-get-completions):
	Fix import case regexp.

2014-10-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/bat-mode.el (bat-font-lock-keywords): Fix \\<_ typo
	(bug#18622).  Reported by Arni Magnusson <arnima@hafro.is>.
	* progmodes/prolog.el (prolog-electric--underscore): Same.

2014-10-09  Glenn Morris  <rgm@gnu.org>

	* frame.el (display-monitor-attributes-list): Doc tweaks.

2014-10-08  Eli Zaretskii  <eliz@gnu.org>

	* faces.el (display-grayscale-p): Mention in the doc string that
	the argument can be either a display name or a frame.

	* frame.el (display-pixel-height, display-pixel-width)
	(display-mm-height, display-mm-width, display-backing-store)
	(display-save-under, display-planes, display-color-cells)
	(display-visual-class, display-monitor-attributes-list)
	(display-screens): Mention in the doc string that the argument can
	be either a display name or a frame.  Improve the docs of the
	monitor attributes.  (Bug#18636)

2014-10-06  Martin Rudalics  <rudalics@gmx.at>

	* term.el (term-window-width): Subtract 1 from the width when
	any fringe has zero width, not just the right fringe.  (Bug#18601)

2014-10-05  Leo Liu  <sdl.web@gmail.com>

	* imenu.el (imenu-default-goto-function): Fix typo.

2014-10-04  Glenn Morris  <rgm@gnu.org>

	* frame.el (frame-monitor-attributes)
	(display-monitor-attributes-list): Doc fixes.

2014-10-03  Dmitry Gutov  <dgutov@yandex.ru>

	* vc/vc-svn.el (vc-svn-ignore-completion-table): Implement.
	(vc-svn-ignore): Use it.  (Bug#18619)

2014-10-03  Martin Rudalics  <rudalics@gmx.at>

	* frame.el (toggle-frame-maximized, toggle-frame-fullscreen):
	In doc-string mention need to set `frame-resize-pixelwise'.

2014-10-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc/vc-svn.el (vc-svn-after-dir-status): Fix the non-remote regexp,