@@ -1,3 +1,11 @@
+2014-10-13  Glenn Morris  <rgm@gnu.org>
+
+	* emacs-lisp/authors.el (authors-aliases, authors-fixed-case)
+	(authors-obsolete-files-regexps): Additions.
+	(authors-no-scan-regexps): New constant.
+	(authors-no-scan-file-p): New function.
+	(authors): Respect authors-no-scan-file-p.
+
 2014-10-12  Fabián Ezequiel Gallina  <fgallina@gnu.org>
 
 	Fix import completion.  (Bug#18582)
